--- a/LoginRegistration/dockerfile
+++ b/LoginRegistration/dockerfile
@@ -4,7 +4,7 @@ FROM tomcat:9.0-jdk17
 RUN rm -rf /usr/local/tomcat/webapps/*
 
 # Copy your WAR file from Jenkins into the Tomcat webapps folder
-COPY . /usr/local/tomcat/webapps/
+COPY target/LoginRegistration.war /usr/local/tomcat/webapps/
 
 EXPOSE 8080
 
