--- a/LoginRegistration/pom.xml
+++ b/LoginRegistration/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.shiva</groupId>
     <artifactId>LoginRegistration</artifactId>
     <packaging>war</packaging>
-    <version>0.0.1</version>
+    <version>0.0.1-${env.BUILD_NUMBER}</version>
     <name>LoginRegistration Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
