--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,6 @@
 name: Java CI/CD Pipeline
 
+# Trigger workflow on push or pull request to main branch
 on:
   push:
     branches:
@@ -13,12 +14,12 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      # Dynamic version for artifact and Docker image
+      # Versioning for artifacts and Docker images
       ARTIFACT_VERSION: 0.0.1-${{ github.run_number }}
-      DOCKER_IMAGE: subhansmd6/java-app:${{ env.ARTIFACT_VERSION }}
+      DOCKER_IMAGE: subhansmd6/java-app:0.0.1-${{ github.run_number }}
 
     steps:
-      # Step 1: Checkout code
+      # Step 1: Checkout the repository
       - name: Checkout Repository
         uses: actions/checkout@v3
 
@@ -29,7 +30,7 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      # Step 3: Set up Maven with cache
+      # Step 3: Set up Maven
       - name: Set up Maven
         uses: actions/setup-java@v3
         with:
@@ -37,7 +38,7 @@ jobs:
           java-version: 17
           cache: maven
 
-      # Step 4: Compile project
+      # Step 4: Compile the project
       - name: Compile Project
         working-directory: LoginRegistration
         run: mvn clean compile -Drevision=${{ env.ARTIFACT_VERSION }}
@@ -74,12 +75,13 @@ jobs:
         working-directory: LoginRegistration
         run: docker build -t $DOCKER_IMAGE .
 
-      # Step 9: Push Docker Image to Docker Hub
+      # Step 9: Login to Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASS }}
 
+      # Step 10: Push Docker Image
       - name: Push Docker Image
         run: docker push $DOCKER_IMAGE
