--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,12 +7,13 @@ pipeline {
     }
 
     environment {
-        DOCKER_IMAGE = "subhansmd6/java-app:${BUILD_NUMBER}"
+        // Docker image with dynamic version
+        DOCKER_IMAGE = "subhansmd6/java-app:0.0.1-${BUILD_NUMBER}"
 
         NEXUS_URL = "54.149.56.125:8081"
         NEXUS_REPO = "maven-releases"
 
-        // Correct credentials
+        // Credentials
         NEXUS_CREDENTIALS = "nexus-details"
         SONAR_TOKEN = credentials('sonar-token')
     }
@@ -38,9 +39,9 @@ pipeline {
                 dir('LoginRegistration') {
                     sh """
                         mvn sonar:sonar \
-                        -Dsonar.projectKey=java-project \
-                        -Dsonar.host.url=http://sonarqube1:9000 \
-                        -Dsonar.login=${SONAR_TOKEN}
+                          -Dsonar.projectKey=java-project \
+                          -Dsonar.host.url=http://sonarqube1:9000 \
+                          -Dsonar.login=${SONAR_TOKEN}
                     """
                 }
             }
@@ -49,40 +50,40 @@ pipeline {
         stage('Build WAR') {
             steps {
                 dir('LoginRegistration') {
-                    sh 'mvn clean package -DskipTests'
+                    sh 'mvn clean package -Drevision=0.0.1-${BUILD_NUMBER} -DskipTests'
                 }
             }
         }
 
         stage('Upload WAR to Nexus') {
-    steps {
-        dir('LoginRegistration') {
-            withCredentials([usernamePassword(
-                credentialsId: "${NEXUS_CREDENTIALS}", 
-                usernameVariable: 'NEXUS_USER', 
-                passwordVariable: 'NEXUS_PASS'
-            )]) {
-                sh """
-                    mvn deploy -DskipTests \
-                        -DaltDeploymentRepository=${NEXUS_REPO}::default::http://${NEXUS_USER}:${NEXUS_PASS}@${NEXUS_URL}/repository/${NEXUS_REPO}
-                """
+            steps {
+                dir('LoginRegistration') {
+                    withCredentials([usernamePassword(
+                        credentialsId: "${NEXUS_CREDENTIALS}", 
+                        usernameVariable: 'NEXUS_USER', 
+                        passwordVariable: 'NEXUS_PASS'
+                    )]) {
+                        sh """
+                            mvn deploy -Drevision=0.0.1-${BUILD_NUMBER} -DskipTests \
+                              -DaltDeploymentRepository=${NEXUS_REPO}::default::http://${NEXUS_USER}:${NEXUS_PASS}@${NEXUS_URL}/repository/${NEXUS_REPO}
+                        """
+                    }
+                }
             }
         }
-    }
-}
 
         stage('Build Docker Image') {
-    steps {
-        dir('LoginRegistration') { // change to wherever Dockerfile is
-            sh 'docker build -t subhansmd6/java-app:${BUILD_NUMBER} .'
+            steps {
+                dir('LoginRegistration') { // Path to Dockerfile
+                    sh 'docker build -t subhansmd6/java-app:0.0.1-${BUILD_NUMBER} .'
+                }
+            }
         }
-    }
-}
 
         stage('Push Image to Docker Hub') {
             steps {
                 withDockerRegistry([credentialsId: 'dockerhub-details', url: '']) {
-                    sh 'docker push ${DOCKER_IMAGE}'
+                    sh 'docker push subhansmd6/java-app:0.0.1-${BUILD_NUMBER}'
                 }
             }
         }
@@ -90,11 +91,10 @@ pipeline {
 
     post {
         success {
-            echo "Successfully pushed Docker image: ${DOCKER_IMAGE}"
+            echo "Successfully pushed Docker image: subhansmd6/java-app:0.0.1-${BUILD_NUMBER}"
         }
         failure {
             echo "Pipeline failed!"
         }
     }
 }
-
