--- a/pom.xml
+++ b/pom.xml
@@ -48,4 +48,21 @@
         </plugins>
     </build>
 
+         <distributionManagement>
+
+    <repository>
+        <id>nexus-releases</id>
+        <name>Nexus Releases</name>
+        <url>http://18.227.49.54:8081/repository/maven-releases/</url>
+    </repository>
+
+    <snapshotRepository>
+        <id>nexus-snapshots</id>
+        <name>Nexus Snapshots</name>
+        <url>http://18.227.49.54:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+
+</distributionManagement>
+
+
 </project>
