--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <revision>0.0.1</revision>   <!-- Revision property for dynamic versioning -->
+        <revision>0.0.1-SNAPSHOT</revision>   <!-- Revision property for dynamic versioning -->
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
